trying to get the first image to not lazyload

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -22,6 +22,6 @@
 "page/page__title",
 
 "modules/moving-picture",
-"modules/flickity"
-// "modules/flickity-custom"
+"modules/flickity",
+"modules/flickity-custom"
 ;
