--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -87,6 +87,7 @@
     width: 100%;
     height: 100%;
     display: block;
+    background-color: #000;
 
     @include respond-min(830px){
         max-height: 75vh;
