--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -51,7 +51,7 @@ layout:default
 	        document.createElement('picture');
 	        window.picturefillCFG = window.picturefillCFG || [];
 	        picturefillCFG.push(["algorithm", "saveData"]);
-	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.0-beta1/picturefill.min.js");
+	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js");
 	    };
 		// loadCSS("/css/boots.css", document.getElementById("loadcss"));
 		loadJS("/js/boots.js");
