--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -5,7 +5,7 @@
         <div class="grid mt2">
             <div class="grid-cell u-medium-1-3">
                 <div class="grid-pad-1x">
-                    <img class="lazyload" src="//cdn4.bethel.edu/images/seal2.png"/>
+                    <img class="lazyload" data-src="https://cdn4.bethel.edu/images/seal2.png"/>
                     <div itemscope="" itemtype="https://schema.org/CollegeOrUniversity" class="bd">
                         <h1 class="h5"><span itemprop="legalName">Bethel University</span></h1>
                         <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
