--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -54,7 +54,7 @@ layout:default
 	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js");
 	    };
 		// loadCSS("/css/boots.css", document.getElementById("loadcss"));
-		loadJS("/js/boots.js");
+		// loadJS("/js/boots.js");
 		// loadCSS("https://cloud.typography.com/6664852/762926/css/fonts.css", document.getElementById("loadcss"));
 	</script>
 
@@ -71,7 +71,7 @@ layout:default
 
 		var cb2 = function() {
 			var m = document.createElement('link'); m.rel = 'stylesheet';
-			m.href = 'https://cloud.typography.com/6664852/762926/css/fonts.css';
+			// m.href = 'https://cloud.typography.com/6664852/762926/css/fonts.css';
 			var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(m, h);
 		};
 		if (raf) raf(cb2);
