--- a/src/scss/boots.scss
+++ b/src/scss/boots.scss
@@ -41,7 +41,7 @@
 // "modules/moving-picture",
 "modules/section--home",
 
-"enhance/carousel",
+// "enhance/carousel",
 
 // "modules/flickity",
 // "modules/flickity-custom",
