--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -57,11 +57,11 @@
 }
 
 .flickity--cell img {
-    visibility: hidden;
+    // visibility: hidden;
 }
 
 .flickity--cell img.lazyloaded {
-    visibility: visible;
+    // visibility: visible;
 }
 
 .carousel--text-over-media .ratio-box
