--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -45,6 +45,9 @@ layout:default
 
 	</div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/1.3.1/lazysizes.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.0/flickity.pkgd.min.js"></script>	
+
 	<script>
 	    function loadJS(u) {var r = document.getElementsByTagName("script")[0], s = document.createElement("script"); s.src = u; r.parentNode.insertBefore(s, r); }
 	    if (!window.HTMLPictureElement) {
@@ -54,7 +57,7 @@ layout:default
 	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js");
 	    };
 		// loadCSS("/css/boots.css", document.getElementById("loadcss"));
-		// loadJS("/js/boots.js");
+		loadJS("/js/boots.js");
 		// loadCSS("https://cloud.typography.com/6664852/762926/css/fonts.css", document.getElementById("loadcss"));
 	</script>
 
