--- a/src/templates/partials/global__header.hbs
+++ b/src/templates/partials/global__header.hbs
@@ -1,7 +1,7 @@
     <div class="global__header" role="banner">
         <div class="inner">    
             <div class="global__logo">
-                <a href="http://www.bethel.edu"><img alt="Bethel University" src="//cdn1.bethel.edu/dev/images/logo-white.png" class="lazyload" /></a>
+                <a href="http://www.bethel.edu"><img alt="Bethel University" data-src="//cdn1.bethel.edu/dev/images/logo-white.png" class="lazyload" /></a>
             </div>
 
             <nav class="big-global__navigation" role="navigation">
