--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -30,7 +30,7 @@ layout:default
 		<div class="inner--content">
 		    <div class="inner-wrap--site__navigation" id="js-inner-wrap--site__navigation">
 
-		    	{{!-- {{> site__navigation }} --}}
+		    	{{> site__navigation }}
 
 		        {{> page__title }}
 
@@ -45,13 +45,15 @@ layout:default
 
 	</div>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.0/flickity.pkgd.min.js"></script>	
+
 	<script>
 	    function loadJS(u) {var r = document.getElementsByTagName("script")[0], s = document.createElement("script"); s.src = u; r.parentNode.insertBefore(s, r); }
 	    if (!window.HTMLPictureElement) {
 	        document.createElement('picture');
 	        window.picturefillCFG = window.picturefillCFG || [];
 	        picturefillCFG.push(["algorithm", "saveData"]);
-	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.0-beta1/picturefill.min.js");
+	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js");
 	    };
 		// loadCSS("/css/boots.css", document.getElementById("loadcss"));
 		loadJS("/js/boots.js");
@@ -71,7 +73,7 @@ layout:default
 
 		var cb2 = function() {
 			var m = document.createElement('link'); m.rel = 'stylesheet';
-			m.href = 'https://cloud.typography.com/6664852/762926/css/fonts.css';
+			// m.href = 'https://cloud.typography.com/6664852/762926/css/fonts.css';
 			var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(m, h);
 		};
 		if (raf) raf(cb2);
