--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -1,4 +1,4 @@
-<div class="flickity  js-rotate-order-carousel  js-load-on-demand  carousel--text-over-media">
+<div class="flickity  js-rotate-order-carousel carousel--text-over-media">
 
 {{#each movingPic}}
 
@@ -15,7 +15,7 @@
                         <source data-srcset="{{ this.mobileImg }}" />
                         <!--[if IE 9]></video><![endif]-->
                         <img
-                                {{!-- class="lazyload" --}}
+                                class="lazyload"
                                 alt="image with artdirection"
                                 data-sizes="auto"
                         />
