--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -31,12 +31,14 @@
 }
 
 .flickity.flickity-enabled {
-    background: none;
+    // background: none;
 }
+
+
 
 .flickity-enabled .flickity--cell {
     visibility: visible;
-    background: none;
+    // background: none;
 
 }
 
@@ -47,7 +49,7 @@
 .flickity--cell {
     visibility: hidden;
     width: 100%;
-    background:#333;  
+    // background:#333;  
     overflow: hidden;
 }
 
@@ -58,13 +60,13 @@
     max-width: 100%;
 }
 
-.flickity--cell img {
-    visibility: hidden;
-}
+// .carousel--employee .flickity--cell img {
+//     visibility: hidden;
+// }
 
-.flickity--cell img.lazyloaded {
-    visibility: visible;
-}
+// .carousel--employee .flickity--cell img.lazyloaded {
+//     visibility: visible;
+// }
 
 .carousel--text-over-media .ratio-box
  {
@@ -173,7 +175,7 @@ Styles for the big carousel on bethel.edu
     }
 }
 .flickity-prev-next-button.next { 
-    right: 1em; 
+    right: 0em; 
 
     @include respond-min(830px){
         right: 1em;
