--- a/src/templates/partials/quotes.hbs
+++ b/src/templates/partials/quotes.hbs
@@ -1,9 +1,9 @@
-<div class="js-flickity carousel--quote  t-marketing-quote">
+<div class="flickity  carousel--employee">
 
-    <div class="flickity--cell">
+    <div class="flickity--cell  lazyload">
         <div class="quote">
             <div class="quote__avatar">
-                <img class="lazyload"  data-src="https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_nettleton-nicole.jpg" style="opacity: 1;">
+                <img  class="lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_nettleton-nicole.jpg" style="opacity: 1;">
             </div>
             <div class="quote__text">
                 <p>Bethel really prepared me...having a liberal arts education was beneficial because it made me well rounded.[Businesses] look for people with all sorts of different backgrounds and leadership experience. Bethel encourages people to get involved.</p>
@@ -12,10 +12,10 @@
         </div>
     </div>
 
-    <div class="flickity--cell">
+    <div class="flickity--cell  lazyload">
         <div class="quote">
-            <div class="quote__avatar" title="">
-                <img class="lazyload" data-src="https://cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_lin-chin-chin.jpg" style="opacity: 1;" title="">
+            <div class="quote__avatar">
+                <img  class="lazyload" data-src="https://cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_lin-chin-chin.jpg" style="opacity: 1;" title="">
             </div>
 
             <div class="quote__text">
@@ -25,10 +25,10 @@
         </div>
     </div>
 
-    <div class="flickity--cell">
+    <div class="flickity--cell  lazyload">
         <div class="quote">
-            <div class="quote__avatar" title="">
-                <img class="lazyload" data-src="https://cdn3.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_vennerstrom-andrew.jpg" style="opacity: 1;" title="">
+            <div class="quote__avatar">
+                <img  class="lazyload" data-src="https://cdn3.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_vennerstrom-andrew.jpg" style="opacity: 1;" title="">
             </div>
 
             <div class="quote__text">
