--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -10,6 +10,8 @@ layout: default
     {{!-- {{> collapsible }} --}}
     {{!-- <img src="//fillmurray.com/800/350">    --}}
 
+    {{> image-bank }}
+
 
     <section class="grid-section">
     <div class="grid">
