--- a/src/scss/modules/_moving-picture--flickity.scss
+++ b/src/scss/modules/_moving-picture--flickity.scss
@@ -135,7 +135,7 @@
 
 .moving-picture__overlay__headline {
 	font-size: 1.5em;
-	margin: 0;
+	// margin: 0;
 	font-weight: 300;
 	letter-spacing: .02em;
 	// text-transform: uppercase;
