--- a/src/scss/modules/_moving-picture.scss
+++ b/src/scss/modules/_moving-picture.scss
@@ -1,7 +1,3 @@
-.ratio-box {
-	// height: 415px !important;
-}
-
 .moving-picture {
 	position: relative;
 
@@ -99,7 +95,7 @@
 
 .moving-picture__overlay__headline {
 	font-size: 1.5em;
-	margin: 0;
+	// margin: 0;
 	font-weight: 300;
 	letter-spacing: .02em;
 
