--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -19,7 +19,7 @@ body{margin:0;}
 
     {{> favicons }}
 
-    <link rel="stylesheet" type="text/css" href="css/boots.css">
+    <link rel="stylesheet" type="text/css" href="css/post.css">
 
     <script>
         window.lazySizesConfig = window.lazySizesConfig || {};
