--- a/src/css/silva_23_header.css
+++ b/src/css/silva_23_header.css
@@ -1,6 +1,8 @@
-@import "base/_variables";
-@import "base/_mixins";
-@import "global/_header";
-@import "global/_toolbox";
-@import "global/_navigation";
-@import "enhance/_off-canvas--main";
+@import 
+"base/variables",
+"base/mixins",
+"global/header",
+"global/toolbox",
+"global/navigation",
+"global/off-canvas--global"
+;
