changing teaser color

--- a/src/scss/typography/_typography.scss
+++ b/src/scss/typography/_typography.scss
@@ -61,9 +61,9 @@ a:hover {
 
 .teaser {
   font-family: $gotham;
-  color: #0069aa;
+  color: #999;
   font-weight: 400;
-  line-height: 1.4;
+  // line-height: 1.4;
 }
 
 .unstyled {
